# usbip-autobind

./: README.md  install_usbip_autobind_server.sh  pyproject.toml  usbip-client-autoattach.py  usbip-host-autobind.py
src/client/: __main__.py
src/server/: __init__.py  __main__.py  assignment_manager.py  client_manager.py  device_manager.py  events.py  tcp_server.py  web_server.py  webui.py
