[project]
name = "usbip-autobind"
version = "0.1.0"
description = "A program to autobind USB devices over IP using USB/IP protocol."
readme = "README.md"
authors = [
    { name = "virus-rpi", email = "usb@owo.computer" },
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "fastapi>=0.118.0",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "nicegui>=3.0.3",
    "pyudev>=0.24.3",
    "starlette>=0.48.0",
    "uvicorn>=0.37.0",
]

[project.scripts]
usbip-server = "server.__main__:run_server"
usbip-client = "client.__main__:run_client"